--- a/css/style.css
+++ b/css/style.css
@@ -17,24 +17,16 @@
     background-color: rgba(0, 0, 0, 0.4);
     width: 50%;
     text-align: center;
-    height: 300px;
+    height: 200px;
     margin: 0 auto;
     padding: 30px;
     border-radius: 20px;
+    color: #fff;
 }
 
-.ticket{
-    width: 80%;
-    height: 300px;
-    margin: 0 auto;
-    background-color: rgba(250, 250, 250, 0.6);
-    margin-top: 70px;
-    display: none;
-}
 
-.active{
-    display: block;
-}
+
+
 
 .input-style{
     border-color: orange;
@@ -57,4 +49,53 @@
 
 .col-33{
     width: calc(100% / 3 - 30px);
+}
+
+.ticket{
+    width: 70%;
+    height: 200px;
+    margin: 0 auto;
+    background-color: #fff;
+    margin-top: 70px;
+    display: none;
+}
+
+.ticket span{
+    font-size: 20px;
+    text-decoration: underline;
+}
+
+.active{
+    display: block;
+}
+
+.ticket-flex-container{
+    display: flex;
+    align-items: center;
+    height: 100%;
+
+}
+
+.ticket-name{
+    padding: 20px;
+    width: 20%;
+    height: 100%;
+    align-self: flex-start;
+    background-color: lightgray;
+    border: 1px dashed black;
+}
+
+.ticket-number{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    height: 50%;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    padding: 20px;
+}
+
+.col-25 h3{
+    margin-bottom: 20px;
 }
